--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "build": "vue-cli-service build",
+    "initiate": "npm install -g @vue/cli \n vue add vuetify"
   },
   "dependencies": {
     "axios": "^0.27.2",
