--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "dev": "nodemon app.js",
-    "initiate": "npm install express dotenv sequelize mysql2"
+    "dev": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
