--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,8 @@
     "core-js": "^3.8.3",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
-    "vuetify": "^2.6.0"
+    "vuetify": "^2.6.0",
+    "vuetify-datetime-picker": "https://github.com/vince-smdt/encadrement-datetime-picker.git"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
