--- a/client/package.json
+++ b/client/package.json
@@ -12,11 +12,11 @@
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
     "vuetify": "^2.6.0",
-    "vuetify-datetime-picker": "https://github.com/vince-smdt/encadrement-datetime-picker.git"
+    "vuetify-datetime-picker": "github:vince-smdt/encadrement-datetime-picker"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-plugin-router": "~5.0.0", 
+    "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "sass": "~1.32.0",
     "sass-loader": "^10.0.0",
