--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,8 @@
   "dependencies": {
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
+    "csv-parser": "^3.0.0",
+    "fs": "^0.0.1-security",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
     "vuetify": "^2.6.0",
