--- a/client/package.json
+++ b/client/package.json
@@ -11,8 +11,7 @@
     "core-js": "^3.8.3",
     "vue": "^2.7.10",
     "vue-router": "^3.5.1",
-    "vuetify": "^2.6.0",
-    "vuetify-datetime-picker": "github:vince-smdt/encadrement-datetime-picker"
+    "vuetify": "^2.6.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
