--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
+    "pinia": "^2.0.23",
     "vue": "^2.7.10",
     "vue-router": "^3.5.1",
     "vuetify": "^2.6.0",
