--- a/server/package.json
+++ b/server/package.json
@@ -18,7 +18,8 @@
     "express": "^4.18.1",
     "fs": "^0.0.1-security",
     "multer": "^1.4.5-lts.1",
-    "mysql2": "^2.3.3"
+    "mysql2": "^2.3.3",
+    "pinia": "^2.0.23"
   },
   "devDependencies": {
     "nodemon": "^2.0.19",
