--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@prisma/client": "^4.3.1",
     "cors": "^2.8.5",
+    "crypto-js": "^4.1.1",
     "csv-parser": "^3.0.0",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
