--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon app.js",
+    "start": "cross-env NODE_ENV=production node app.js",
     "dev": "nodemon app.js"
   },
   "keywords": [],
@@ -13,6 +13,7 @@
   "dependencies": {
     "@prisma/client": "^4.3.1",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "crypto-js": "^4.1.1",
     "csv-parser": "^3.0.0",
     "dotenv": "^16.0.2",
